--- a/client/src/components/modules/StockView/StockView.scss
+++ b/client/src/components/modules/StockView/StockView.scss
@@ -1,9 +1,20 @@
 .container__stockview {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &-title {
+    text-align: center;
+    margin: 100px 0;
+  }
+  &-buttons-group {
     display: flex;
     justify-content: center;
-    align-items: center;
+    button {
+      margin: 40px 10px;
+    }
+  }
 }
