--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -1,16 +1,30 @@
 .form {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
-    width: 100%;
-    &__content {
-        display: flex;
-        justify-content: space-between;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  &__content {
+    &-main-group-1 {
+      box-sizing: border-box;
+      display: flex;
+      &-stock-value,
+      &-stock-price,
+      &-stock-list {
+        margin: 0 5px;
+      }
     }
-    .button {
-        display: flex;
-        justify-content: center;
-        padding: 20px 0 20px 0;
+    &-main-group-2 {
+      margin-top: 15px;
+      div {
+        margin: 0 !important;
+      }
     }
-
+    &-footer {
+      display: flex;
+      justify-content: center;
+      margin-top: 15px;
+      button {
+        margin: 0 10px;
+      }
+    }
+  }
 }
