--- a/client/src/components/modules/StockView/StockView.scss
+++ b/client/src/components/modules/StockView/StockView.scss
@@ -1,20 +1,11 @@
 .container__stockview {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   &-title {
     text-align: center;
-    margin: 100px 0;
-  }
-  &-buttons-group {
-    display: flex;
-    justify-content: center;
-    button {
-      margin: 40px 10px;
-    }
+    margin-bottom: 100px;
   }
 }
