--- a/client/src/components/modules/StockView/StockView.scss
+++ b/client/src/components/modules/StockView/StockView.scss
@@ -1,6 +1,6 @@
 .container__stockview {
   width: 100%;
-  height: 100vh;
+  margin-top: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
