success-alert-functionality

--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -73,6 +73,9 @@
         font-weight: 500;
         text-decoration-line: underline;
         cursor: pointer;
+        svg {
+          margin-bottom: -4px;
+        }
       }
     }
   }
